--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,7 @@ S3method(db_save_query,OraConnection)
 S3method(head,tbl_oracle)
 S3method(sql_subquery,OraConnection)
 S3method(src_desc,src_oracle)
-S3method(src_translate_env,src_oracle)
+S3method(sql_translate_env,src_oracle)
 S3method(tbl,src_oracle)
 S3method(union_all,tbl_oracle)
 S3method(update,tbl_oracle)
